fix chart jackets